--- a/package.json
+++ b/package.json
@@ -3,12 +3,16 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "DEBUG=fetch-images:* node ./bin/www"
+    "start": "DEBUG=fetch-images:* node ./bin/www",
+    "dev": "DEBUG=fetch-images:* nodemon ./bin/www"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "morgan": "~1.9.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.0"
   }
 }
