--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "ramda": "^0.29.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
