--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "graphql": "^16.8.1",
+    "graphql-http": "^1.22.0",
     "morgan": "~1.9.1",
-    "ramda": "^0.29.1"
+    "ramda": "^0.29.1",
+    "ruru": "^2.0.0-beta.11"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
