--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "graphql-http": "^1.22.0",
     "morgan": "~1.9.1",
     "ramda": "^0.29.1",
+    "redis": "^4.6.13",
     "ruru": "^2.0.0-beta.11"
   },
   "devDependencies": {
