--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,3 +7,26 @@ services:
     restart: always
     ports:
       - "6379:6379"
+
+  postgres:
+    image: postgres:16
+    restart: always
+    ports:
+      - 5432:5432
+    volumes:
+      - pgdata:/var/lib/postgresql/data
+    environment:
+      - POSTGRES_USER=admin
+      - POSTGRES_PASSWORD=admin
+      - POSTGRES_DB=dev
+
+  adminer:
+    image: adminer:4.8.1-standalone
+    restart: always
+    ports:
+      - 8080:8080
+    environment:
+      - ADMINER_DEFAULT_SERVER=postgres
+
+volumes:
+  pgdata:
