--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "DEBUG=fetch-images:* nodemon --env-file=.env ./bin/www"
   },
   "dependencies": {
+    "@prisma/client": "^5.10.2",
     "axios": "^1.6.7",
+    "bcrypt": "^5.1.1",
     "compression": "^1.7.4",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
@@ -21,6 +23,7 @@
     "ruru": "^2.0.0-beta.11"
   },
   "devDependencies": {
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.0",
+    "prisma": "^5.10.2"
   }
 }
