--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "~4.16.1",
     "graphql": "^16.8.1",
     "graphql-http": "^1.22.0",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "~1.9.1",
     "node-cron": "^3.0.3",
     "ramda": "^0.29.1",
