--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -20,6 +20,7 @@ services:
       - POSTGRES_PASSWORD=admin
       - POSTGRES_DB=dev
 
+  # simple web-based database admin panel
   adminer:
     image: adminer:4.8.1-standalone
     restart: always
